tests/ui/higher-ranked/leak-check/candidate-from-env-universe-err-2.current.stderr
error: lifetime may not live long enough
  --> $DIR/candidate-from-env-universe-err-2.rs:14:5
   |
LL | fn not_hr<'a, T: for<'b> Trait<'a, 'b> + OtherTrait<'static>>() {
   |           -- lifetime `'a` defined here
LL |     impl_hr::<T>();
   |     ^^^^^^^^^^^^ requires that `'a` must outlive `'static`
   |
note: due to current limitations in the borrow checker, this implies a `'static` lifetime
  --> $DIR/candidate-from-env-universe-err-2.rs:11:19
   |
LL | fn impl_hr<'b, T: for<'a> Trait<'a, 'b>>() {}
   |                   ^^^^^^^^^^^^^^^^^^^^^

error: implementation of `Trait` is not general enough
  --> $DIR/candidate-from-env-universe-err-2.rs:14:5
   |
LL |     impl_hr::<T>();
   |     ^^^^^^^^^^^^ implementation of `Trait` is not general enough
   |
   = note: `T` must implement `Trait<'0, '_>`, for any lifetime `'0`...
   = note: ...but it actually implements `Trait<'1, '_>`, for some specific lifetime `'1`

error: aborting due to 2 previous errors

